[project]
name = "runmesh"
version = "0.1.0"
description = "Task execution API for webhooks, queues, and scheduled jobs on Cloudflare Workers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "markupsafe",
    "jinja2",
    "python-multipart>=0.0.32",
]


[dependency-groups]
dev = ["workers-py", "workers-runtime-sdk"]
